--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header></header>
-    <main id="x">
-    
+    <main>
+        <div class="wrapper" id="main"></div>
     </main>
     <footer></footer>
     <script src="index.js"></script>
